applications/static-web-server/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: static-web-server
spec:
  hostnames:
    - newsletter.developer-friendly.blog
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: global
      namespace: default
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: static-web-server
          port: 80
      filters:
        - responseHeaderModifier:
            set:
              - name: Access-Control-Allow-Credentials
                value: "true"
              - name: Access-Control-Allow-Headers
                value: "*"
              - name: Access-Control-Allow-Methods
                value: GET, PUT, POST, DELETE, OPTIONS
              - name: Access-Control-Allow-Origin
                value: "*"
              - name: Cache-Control
                value: no-cache, no-store
              - name: Content-Security-Policy
                value:
                  default-src 'self'; object-src 'none'; frame-ancestors 'none'; upgrade-insecure-requests;
                  block-all-mixed-content
              - name: Cross-Origin-Embedder-Policy
                value: unsafe-none
              - name: Cross-Origin-Opener-Policy
                value: unsafe-none
              - name: Cross-Origin-Resource-Policy
                value: cross-origin
              - name: Referrer-Policy
                value: unsafe-url
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Permitted-Cross-Domain-Policies
                value: none
              - name: X-XSS-Protection
                value: "0"
          type: ResponseHeaderModifier
      matches:
        - path:
            type: Exact
            value: /logo.webp
        - path:
            type: Exact
            value: /favicon.ico
